<resources>
    <string name="app_name">getText</string>
    <string name="nav_home">Home</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_wish_list">Wish List</string>
    <string name="nav_me">Me</string>
    <!-- Strings related to login -->
    <string name="text_register">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">UserName</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_link_to_register">Not a member? Create an account now!</string>
    <string name="btn_link_to_login">Already registered. Sign me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="rememberCheckBox">Remember my credentials</string>

    <!--Firebase fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_posts">posts</string>
    <string name="node_posts">posts</string>
    <string name="dbname_books">books</string>
    <string name="nav_sell_book">Sell Book</string>
</resources>
